Fixed styling on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -88,9 +88,12 @@ a, pre {
 }
 #main-header{
     display : flex;
+    display: -webkit-flex;
     justify-content: center;
+    -webkit-justify-content: center;
     padding: 50px;
     flex-direction: column;
+    -webkit-flex-direction: column;
 }
 #main-header-text{
     color : #444;
@@ -100,7 +103,9 @@ a, pre {
 .row {
     margin: 0px 0px;
     display: flex;
+    display: -webkit-flex;
     flex-direction: row;
+    -webkit-flex-direction: row;
     border: 1px solid #e9edf1;
 
 }
@@ -110,8 +115,11 @@ a, pre {
     height: 640px;
     width: 100%;
     display: flex;
+    display: -webkit-flex;
     flex-direction: row;
+    -webkit-flex-direction: row;
     justify-content: center;
+    -webkit-justify-content: center;
     text-align:center;
     padding: 20px;
 
@@ -153,7 +161,10 @@ a, pre {
 
 #tabs-container{
     display : flex;
+    display: -webkit-flex;
+
     flex-direction: column;
+    -webkit-flex-direction: column;
     list-style-type: none;
     padding: 0px;
     margin: 0px;
@@ -162,12 +173,16 @@ a, pre {
 }
 .tab {
     display: flex;
+    display: -webkit-flex;
+
     flex-grow: 1;
     font-size: 1.2em;
     border-bottom: 1px solid white;
     text-align:center;
     flex-direction: column;
+    -webkit-flex-direction: column;
     justify-content: center;
+    -webkit-justify-content: center;
     color : white;
     background-color: #00BAF0;
     cursor: pointer;
@@ -194,8 +209,12 @@ a, pre {
 
 .three-up{
     display: flex;
+    display: -webkit-flex;
+
     flex-direction: row;
+    -webkit-flex-direction: row;
     justify-content: space-around;
+    -webkit-justify-content: space-around;
     flex-wrap: wrap;
     padding : 10px;
 }
